# UnifiedConflictDetection

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
Data/ProcessedData/100Car/: HundredCar_metadata_CrashEvent.csv  HundredCar_metadata_NearCrashEvent.csv
Data/RawData/100Car/CleanedData/: HundredCar_EventNarratives.csv
Data/RawData/highD/: .gitignore
DataProcessing/: extraction_highD_LC.py  matching_100Car.py  preprocessing_highD.py
DataProcessing/utils/: coortrans.py  ekf_parameters_highD.ipynb  get_heading_ekf.py
Demonstration/: demonstration_utils.py
Demonstration/ConflictProbability/: collision_warning.py  optimal_warning.py  pre_computation.py  result_analysis.ipynb
Demonstration/IntensityEvaluation/: lane_change_selection.py  result_analysis.ipynb
DirectReuse/: likelihood_52epoch.pth  model_52epoch.pth  test.ipynb  unified_conflit_detection.py
GaussianProcessRegression/: model_evaluation.ipynb  model_training.py  training_utils.py
Visualisation/: FigureMaker.ipynb  gif_maker.py  vector_image_maker.ipynb  video_maker.py  video_recoder_100Car.py  video_recoder_highD_LC.py  visual_utils.py
